# symdis

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION.md  README.md  SPEC.md  about.hbs  about.toml
.github/workflows/: ci.yml  release.yml
src/: cache.rs  config.rs  demangle.rs  main.rs  socorro.rs
src/binary/: elf.rs  macho.rs  mod.rs  pe.rs
src/commands/: cache_cmd.rs  disasm.rs  fetch.rs  field_layout.rs  info.rs  lookup.rs  mod.rs
src/disasm/: annotate.rs  engine.rs  mod.rs
src/fetch/: apt.rs  archive.rs  debuginfod.rs  microsoft.rs  mod.rs  pacman.rs  snap.rs  tecken.rs
src/output/: json.rs  mod.rs  text.rs
src/symbols/: breakpad.rs  id_convert.rs  mod.rs  pdb.rs  tpi.rs
