[package]
name = "symdis"
version = "0.1.0"
edition = "2021"
license = "MPL-2.0"
description = "Symbolic disassembler for Mozilla crash report analysis"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", features = ["gzip", "rustls-tls", "json"] }
goblin = "0.9"
capstone = "0.13"
cab = "0.6"
dirs = "6.0"
bzip2 = "0.5"
flate2 = "1.1"
tempfile = "3"
liblzma = "0.4"
tar = "0.4"
quick-xml = "0.37"
cpio_reader = "0.1"
cpp_demangle = "0.4"
rustc-demangle = "0.1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = "0.3"
backhand = { version = "0.24", default-features = false, features = ["xz", "lzo"] }
