[package]
name = "symdis"
version = "0.4.1"
edition = "2024"
license = "MPL-2.0"
description = "Symbolic disassembler for Mozilla crash report analysis"
repository = "https://github.com/yjugl/symdis"
homepage = "https://github.com/yjugl/symdis"
readme = "README.md"
keywords = ["disassembler", "crash-analysis", "symbols", "mozilla", "debugging"]
categories = ["command-line-utilities", "development-tools::debugging"]
exclude = ["CLAUDE.md", ".github/"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.13", default-features = false, features = ["gzip", "rustls", "json"] }
goblin = "0.10"
capstone = "0.14"
cab = "0.6"
dirs = "6.0"
bzip2 = "0.6"
flate2 = "1.1"
tempfile = "3"
liblzma = "0.4"
tar = "0.4"
quick-xml = "0.39"
cpio_reader = "0.1"
cpp_demangle = "0.5"
rustc-demangle = "0.1"
toml = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"
backhand = { git = "https://github.com/yjugl/backhand.git", branch = "lzokay", default-features = false, features = ["xz", "lzo"] }
zip = { version = "8.2", default-features = false, features = ["deflate"] }
pdb = "0.8"
msvc-demangler = "0.11"
moz-cli-version-check = "0.2"
zstd = "0.13"

[profile.release]
strip = true
lto = "thin"
codegen-units = 1

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/symdis-{ target }.tar.gz"
pkg-fmt = "tgz"
bin-dir = "{ bin }{ binary-ext }"

[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/symdis-{ target }.zip"
pkg-fmt = "zip"

[package.metadata.binstall.overrides.aarch64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/symdis-{ target }.zip"
pkg-fmt = "zip"
